Preparing for inital deployment

--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,6 +1,7 @@
 {% if page.comments %}
 <div id="disqus_thread"></div>
 <script type="text/javascript">
+    var disqus_developer = 1;
     var disqus_shortname = 'geekwriters';
     var disqus_identifier = '{{ page.url }}'
     var disqus_url = 'http://www.geekwriters.net{{ page.url }}';
