--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,35 +22,36 @@
 
 </head>
 <body>
-  <header>
-    <hgroup>
-      <h1>Geek Writers</h1>
-      <h2>The Oklahoma Geek Writing Group</h2>
-    </hgroup>
-    <nav>
-      <div id="navigation" class="lavaLamp">
-        <ul>
-          <li><a href="/">Home</a></li>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/meetings.html">Meetings</a></li>
-          <li><a href="/submit.html">Submit</a></li>
-        </ul>
-      </div>
-    </nav>
-  </header>
+  <section id="page">
+    <header>
+      <hgroup>
+        <h1>Geek Writers</h1>
+        <h2>The Oklahoma Geek Writing Group</h2>
+      </hgroup>
+      <nav>
+        <div id="navigation" class="lavaLamp">
+          <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/meetings.html">Meetings</a></li>
+            <li><a href="/submit.html">Submit</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
   
-  <section>
-    <div id="corkboard">
-      <div id="container">
-        <div id="content">
+    <section>
+      <div id="corkboard">
+        <div id="container">
+          <div id="content">
 
-          {{ content }}
+            {{ content }}
                  
+          </div>
         </div>
       </div>
-    </div>
+    </section>
   </section>
-  
   <footer>
     <div id="goodies">
       <nav class="links">
